# ChangeLog for x11-apps/oclock
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/oclock/ChangeLog,v 1.15 2007/11/24 15:29:15 armin76 Exp $

  24 Nov 2007; Raúl Porcel <armin76@gentoo.org> oclock-1.0.1.ebuild:
  Add ~ia64 wrt #200202

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; oclock-1.0.1.ebuild:
  Update description to be less generic.

  05 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; oclock-1.0.1.ebuild:
  (#146089) alpha/amd64/arm/mips/ppc/ppc64/sh/sparc/x86 stable.

  20 May 2006; Robin H. Johnson <robbat2@gentoo.org> oclock-1.0.1.ebuild:
  Added ~ppc after testing.

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> oclock-1.0.1.ebuild:
  Added ~ppc64

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -oclock-0.99.2.ebuild, -oclock-1.0.0.ebuild:
  Pull old versions.

*oclock-1.0.1 (23 Dec 2005)

  23 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>; +oclock-1.0.1.ebuild:
  Bump for 7.0.

*oclock-1.0.0 (18 Dec 2005)

  18 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +oclock-1.0.0.ebuild:
  Bump for 7.0RC4.

  09 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -oclock-0.99.0.ebuild, -oclock-0.99.1.ebuild:
  Pull old versions.

*oclock-0.99.2 (04 Dec 2005)

  04 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +oclock-0.99.2.ebuild:
  Bump for 7.0RC3.

  17 Nov 2005; Herbie Hopkins <herbs@gentoo.org> oclock-0.99.1.ebuild:
  Marked ~amd64.

*oclock-0.99.1 (20 Oct 2005)

  20 Oct 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +oclock-0.99.1.ebuild:
  Bump for 7.0 RC1.

  09 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>; +metadata.xml:
  Add metadata.

  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org> oclock-0.99.0.ebuild:
  Add ~sparc keyword (Modular X testing).

*oclock-0.99.0 (08 Aug 2005)

  08 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +oclock-0.99.0.ebuild:
  Initial commit for modular X.
