@@ -1,5 +1,5 @@
 AUX oclock-1.0.1-winnt.patch 8169 RMD160 e94fed8a4125dbb7b843a35287e4003a1e67b7cc SHA1 c9dfa49bdfbba5413eaac49277b066752d5f1e16 SHA256 89bc1eaccfa7ac44285587f36f830b20e6ed986bab1b33e575c74aa53ae5dee6
 DIST oclock-1.0.1.tar.bz2 83216 RMD160 463175c93f7807f9c5944ffcb34c39be7a066d96 SHA1 5245ac01d5dc940c89b8c39c3ee435b4f20a5db7 SHA256 49ab7d4f6402fbbe30714012ee38b49da17789f3a29ac41917987ce18c74217c
-EBUILD oclock-1.0.1.ebuild 614 RMD160 db680af36264269b38a452b9906af85b115b0d03 SHA1 2a2e5f19e1523daad8da544b1c0ccede45d15101 SHA256 0704e03e244a8c15f29bc067c38c9da8a035b06ae59047f0ff43e92bef86d6e5
-MISC ChangeLog 1951 RMD160 fba85bee243c1f4203c42d7dc67ab1df5d46db31 SHA1 e4f432e42224c2e59ab91ef091fc54338629e752 SHA256 22bfcc33e9a994f2a08b6e2ba7ba6e1a8a95829409ed6b69efb58fb7a86bef4e
+EBUILD oclock-1.0.1.ebuild 619 RMD160 e8db07719ac00e39d439d5422f8a219b241b2ba8 SHA1 5e8d5c95e1d59d281f0d1a5bab26067eeded294e SHA256 62abe918c210cd3e9db34c9dc2c03669d233552dc288fbab734380169375bfc5
+MISC ChangeLog 2049 RMD160 efb899f009fc64f365e6bab68b30b11d2dedd623 SHA1 a8ba900932bb1fb43a5006096a2970b0b64e8bbf SHA256 c73757bb3ffa7702af7df6a6b4849642d360a8a682cea3ac568fe661d29012ef
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
